# PA-form-filler-backend

./: .env.example  .gitignore  README.md  process_result_horizontal.json  process_result_horizontal_check.json  process_result_namefix.json  process_result_vertical.json  process_result_vertical_check.json  pyproject.toml
app/: config.py  main.py  models.py
app/services/: mistral_client.py  pdf_extractor.py  pdf_form_filler.py  pdf_overlay.py  pipeline.py  template_detection.py  template_registry.py  tracker.py
runtime/: templates.json
scripts/: run_pipeline.py
